<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    tools:context=".ui.main.UserPageFragment">

    <data>

        <variable
            name="viewModel"
            type="com.ebookfrenzy.userpage.ui.main.UserPageViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outerContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.status}"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Error" />

        <Button
            android:id="@+id/retryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorTextView"
            app:layout_constraintVertical_bias="0.301" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerContainer"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_margin="6dp"
                    android:contentDescription="@string/profile_picture"
                    app:imageUrl="@{viewModel.profile.picture.url}"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/firstNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="6dp"
                        android:layout_weight="1"
                        android:gravity="bottom|start"
                        android:text="@{viewModel.profile.name.first}"
                        android:textSize="20sp"
                        tools:text="@string/first_name" />

                    <TextView
                        android:id="@+id/secondNameTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@{viewModel.profile.name.last}"

                        android:textSize="20sp"
                        tools:text="@string/second_name" />

                    <TextView
                        android:id="@+id/addressTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:layout_weight="1"
                        android:gravity="top"
                        android:text="@{viewModel.profile.location.toString()}"
                        android:textSize="16sp"
                        tools:text="@string/address_example" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="1"
                    android:text="@string/date_of_birth" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:gravity="center|start"
                    android:text="@{viewModel.profile.dob.toString()}"
                    android:textSize="20sp"
                    tools:text="@string/birthday_example" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="@string/phone_number" />

                    <TextView
                        android:id="@+id/phoneTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="6dp"
                        android:gravity="center|start"
                        android:text="@{viewModel.profile.phone}"
                        android:textSize="20sp"
                        tools:text="@string/phone_example" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/callButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:contentDescription="@string/call"
                    android:minWidth="48dp"

                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_phone_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="6dp"
                        android:text="@string/coordinates" />

                    <TextView
                        android:id="@+id/coordinatesTextView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="6dp"
                        android:gravity="center|start"
                        android:text="@{viewModel.profile.location.coordinates.toString()}"
                        android:textSize="20sp"
                        tools:text="@string/cooridnates_example" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/showOnMapButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:contentDescription="@string/show_on_map"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_baseline_location_on_24" />
            </LinearLayout>

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>